--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="class_code" translatable="false">Class_code</string>
     <string name="curr_login_user" translatable="false">curr_login_user</string>
+    <string name="course_category" translatable="false">course category</string>
 
     <!--    for integrating Google login API-->
     <string name="client_id" translatable="false">3088778948-uq8tefiista247kqpgod301h2fllh9i4.apps.googleusercontent.com</string>
@@ -50,6 +51,13 @@
     <string name="Class_Statistics">Class Statistics</string>
     <string name="LeaderBoard">LeaderBoard</string>
     <string name="Profile">Profile</string>
+
+    <string name="example_course_code" translatable="false">E.g. 123456</string>
+    <string name="enter_class_code_hint">Please enter your class code</string>
+    <string name="select_course_category_hint">Please select a course category</string>
+    <string name="MATH">Math</string>
+    <string name="ENGLISH">English</string>
+    <string name="QUANTUM_PHYSICS">QuantumPhysic</string>
 
     <!--    used in quiz fragment-->
     <string name="go_to_quiz">Go to Quiz</string>
