--- a/Front-end/app/src/main/res/values/strings.xml
+++ b/Front-end/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="Continue_text">Continue</string>
 
     <string name="class_code" translatable="false">Class_code</string>
+    <string name="invalid_class_code">Invalid class code.</string>
     <string name="curr_login_user" translatable="false">curr_login_user</string>
     <string name="course_category" translatable="false">course category</string>
 
